[package]
name = "bench_pg_unwind"
version = "0.1.0"
authors = ["Joshua Lockerman  <josh@timescale.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies.timescale-extension-utils]
git = "https://github.com/timescale/timescale-extension-utils"
branch = "guard+pg"

[profile.release]
lto = true

[features]
default = ["timescale-extension-utils/parse_headers"]
